--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "@opentok/client": "^2.21.0",
-    "@symblai/symbl-web-sdk": "^0.5.1-labs.2",
+    "@symblai/symbl-web-sdk": "^0.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
